--- a/map.html
+++ b/map.html
@@ -313,7 +313,7 @@ function dataFinished() {
                 return (buildings[b].sumOfKWh / buildings[b].num_of_buildings).toFixed();
             }
             function totalPower(b) {
-                return (buildings[b].sumOfKWh / buildings[b].num_of_buildings).toFixed();
+                return (buildings[b].sumOfKWh).toFixed();
             }
 
             new mapboxgl.Popup()
