--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
                 </div>
               </div>
             </div>
-            <div class="col-md=2" style="margin-top: 10px;">
+            <div class="col-md-2 centered" style="margin-top: 10px;">
               <div class="card">
                 <div class="card-header">
                   <h4 class="card-title" style="text-align: center">Legend</h4>
-                  <img src="https://i.imgur.com/auha9AA.png">
+                  <img src="https://i.imgur.com/auha9AA.png" class="center-block">
                 </div>
               </div>
             </div>
