--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-lg">
-          <div class="modal-content" style="padding:50px;">
+          <div class="modal-content" style="padding:0 50px 0 50px;">
 
             <form>
               <div class="modal-footer">
